--- a/skip/getting-started-python/optional-kubernetes-engine/gatling-skip/src/test/resources/application.conf
+++ b/skip/getting-started-python/optional-kubernetes-engine/gatling-skip/src/test/resources/application.conf
@@ -1,7 +1,7 @@
 tweeter {
-  host = "172.22.11.111"
+  host = "35.221.22.94"
   index = "tweets"
-  endpoint = "http://"${tweeter.host}"/"${tweeter.index}
+  endpoint = "http://"${tweeter.host}"/"
   duration = 1
-  maxUsers = 10
+  maxUsers = 100000
 }
